// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v2;

import "google/protobuf/duration.proto";
import "scalapb/scalapb.proto";

// catch-up configuration parameters
message CatchUpConfig {
  uint32 catchup_interval_skip = 1;
  uint32 nr_intervals_to_trigger_catchup = 2;
}

message DynamicDomainParameters {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Duration participant_response_timeout = 1;
  google.protobuf.Duration mediator_reaction_timeout = 2;
  google.protobuf.Duration transfer_exclusivity_timeout = 3;
  google.protobuf.Duration topology_change_delay = 4;
  google.protobuf.Duration ledger_time_record_time_tolerance = 5;
  google.protobuf.Duration reconciliation_interval = 6;
  google.protobuf.Duration mediator_deduplication_timeout = 7;
  uint32 max_rate_per_participant = 8;
  uint32 max_request_size = 9;
  CatchUpConfig catch_up_parameters = 10;
}
